--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1340,7 +1340,7 @@ body {
 .cid-qtVDs1goWR {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background3.jpg");
+  background-image: url("https://cdn.rawgit.com/earnow/iphone6/gh-pages/assets/images/background3.jpg");
 }
 .cid-qtVDs1goWR .mbr-figure {
   margin: 0 auto;
